feat: mvp - part2 - rm formater use sqlfluff replace

--- a/docs/plan/2025-08-09-MVP.md
+++ b/docs/plan/2025-08-09-MVP.md
@@ -5,15 +5,15 @@
 
 ## 需求概述
 
-实现一个 VSCode 扩展，允许用户在 Python 文件中对内联的 SQL 字符串进行优化编辑。通过集成 sqls 语言服务器，提供 SQL 语法高亮、自动补全和语法检查功能。
+实现一个 VSCode 扩展，允许用户在 Python 文件中对内联的 SQL 字符串进行优化编辑。通过集成 sqls 语言服务器，提供 SQL 语法高亮、自动补全（Completion）和悬停信息（Hover）。不再由本扩展提供 SQL 格式化能力，Lint/Format 请使用其他插件（推荐 SQLFluff）。
 
 ## 核心功能需求
 
 ### 1. 内联 SQL 编辑器
-用户在 Python 文件中选中 SQL 字符串片段后，可以在临时的 SQL 编辑器窗口中进行编辑，享受完整的 SQL 语言服务支持。
+用户在 Python 文件中选中 SQL 字符串片段后，可以在临时的 SQL 编辑器窗口中进行编辑，享受 sqls 带来的补全与悬停信息支持。
 
 ### 2. SQL 文件增强支持
-为 `.sql` 文件提供基于 sqls LSP 的完整语言服务支持。
+为 `.sql` 文件提供基于 sqls LSP 的补全与悬停信息支持。
 
 ## 技术规格
 
@@ -28,6 +28,7 @@
 ### 依赖的外部工具
 - **sqls LSP Server**: https://github.com/lighttiger2505/sqls
 - **参考实现**: https://github.com/lighttiger2505/vscode-sqls
+- **建议的格式化/Lint 工具**: SQLFluff https://docs.sqlfluff.com
 
 ## MVP 功能流程
 
@@ -48,7 +49,7 @@ graph TD
     E --> K[启用 sqls LSP]
     K --> L[提供语法高亮]
     K --> M[提供自动补全]
-    K --> N[提供语法检查]
+    K --> N[提供悬停信息]
 ```
 
 ### 技术实现流程
@@ -78,7 +79,7 @@ graph LR
     C --> D[sqls LSP Server]
     D --> E[SQL 语法分析]
     D --> F[自动补全]
-    D --> G[错误诊断]
+    D --> G[悬停信息]
     E --> C
     F --> C
     G --> C
@@ -150,7 +151,6 @@ sequenceDiagram
     U->>E: 保存临时文件
     E->>T: 读取内容
     T->>E: 返回 SQL 内容
-    E->>E: 格式化/验证
     E->>O: 更新原位置
     E->>U: 显示成功提示
 ```
@@ -170,12 +170,11 @@ sequenceDiagram
 }
 ```
 
-#### 语言服务器特性
-- **语法高亮**: 完整 SQL 语法支持
-- **自动补全**: 表名、列名、函数补全
-- **错误诊断**: 语法错误检测
-- **格式化**: SQL 代码格式化
-- **悬停信息**: 表结构、函数说明
+#### 语言服务器特性（本扩展范围）
+- 语法高亮
+- 自动补全
+- 悬停信息
+- 错误诊断（如 sqls 提供）
 
 ### 5. 用户体验设计
 
@@ -185,14 +184,14 @@ graph LR
     A[原 Python 文件<br/>左侧编辑器] --> B[SQL 编辑器<br/>右侧分屏]
     B --> C[实时语法检查]
     B --> D[自动补全提示]
-    B --> E[格式化支持]
+    B --> E[悬停信息]
 ```
 
 #### 错误处理策略
-- **选择内容非 SQL**: 提示用户选择有效 SQL 字符串
-- **sqls 未安装**: 提供安装指导链接
-- **LSP 连接失败**: 降级到基础编辑模式
-- **同步失败**: 保留临时文件，提示手动复制
+- 选择内容非 SQL: 提示用户选择有效 SQL 字符串
+- sqls 未安装: 提供安装指导链接
+- LSP 连接失败: 降级到基础编辑模式
+- 同步失败: 保留临时文件，提示手动复制
 
 ### 6. 配置选项
 
@@ -204,25 +203,29 @@ graph LR
     "default": "sqls",
     "description": "Path to sqls executable"
   },
-  "sqlsugar.autoFormat": {
-    "type": "boolean",
-    "default": true,
-    "description": "Auto format SQL on save"
-  },
   "sqlsugar.tempFileCleanup": {
     "type": "boolean",
     "default": true,
     "description": "Auto cleanup temporary files"
+  },
+  "sqlsugar.cleanupOnClose": {
+    "type": "boolean",
+    "default": true,
+    "description": "If true, delete temp SQL file on editor close; if false, delete on save when tempFileCleanup is enabled"
+  },
+  "sqlsugar.sqlsConfigPath": {
+    "type": "string",
+    "default": "",
+    "description": "Path to sqls configuration file (leave empty to use default)"
   }
 }
 ```
 
 ## 参考实现
 
-- **sqls LSP server**: https://github.com/lighttiger2505/sqls
-- **vscode-sqls 插件**: https://github.com/lighttiger2505/vscode-sqls
-- **sqlfluff**: https://docs.sqlfluff.com
-  - support sqlalchemy like placeholder: https://docs.sqlfluff.com/en/3.3.1/configuration/templating/placeholder.html
+- sqls LSP server: https://github.com/lighttiger2505/sqls
+- vscode-sqls 插件: https://github.com/lighttiger2505/vscode-sqls
+- SQLFluff: https://docs.sqlfluff.com
 
 ## 实现优先级
 
@@ -235,8 +238,7 @@ graph LR
 ### Phase 2 (LSP Integration)
 1. sqls LSP 客户端集成
 2. 语法高亮和错误诊断
-3. 自动补全功能
-4. 格式化支持
+3. 自动补全与悬停信息
 
 ### Phase 3 (Enhanced UX)
 1. 配置选项支持
@@ -247,7 +249,7 @@ graph LR
 ## 成功标准
 
 1. ✅ 用户可以通过右键菜单打开 SQL 编辑器
-2. ✅ SQL 编辑器提供语法高亮和补全
+2. ✅ SQL 编辑器提供语法高亮、补全和悬停信息
 3. ✅ 保存后能正确同步回原文件
 4. ✅ 支持多种 Python SQL 字符串格式
 5. ✅ 临时文件能正确清理
